Fixes calendar not aligning to center.

--- a/tweaks.css
+++ b/tweaks.css
@@ -25,6 +25,7 @@ body {
 }
 
 .calendar {
+  text-align: center;
   margin-left: 1rem;
   margin-right: 1rem;
 }
